--- a/acc.html
+++ b/acc.html
@@ -6,139 +6,42 @@
     <title>123 Bank PLC - Account Opening</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Dark Theme */
-        body.dark {
-            background-color: #212529;
-            color: #f8f9fa;
-        }
-        body.dark .form-control, body.dark .form-select {
-            background-color: #343a40;
-            color: #f8f9fa;
-            border-color: #495057;
-        }
-        body.dark .btn {
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-        body.dark .btn-secondary {
-            background-color: #6c757d;
-            border-color: #6c757d;
-        }
-
-        /* General Styling */
-        body {
-            background-color: #f8f9fa;
-            color: #212529;
-        }
-        .container {
-            max-width: 600px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        .navbar-brand img {
-            width: 40px;
-            height: auto;
-        }
+        /* Hide non-active steps */
         .step {
             display: none;
         }
+
         .step.active {
             display: block;
         }
 
-        /* Step Indicator */
-        .step-indicator {
-            margin: 20px 0;
-            text-align: center;
-        }
+        /* Centering and styling step indicator */
         .step-indicator span {
-            display: inline-block;
-            margin: 0 5px;
             width: 30px;
             height: 30px;
-            background-color: #ddd;
-            border-radius: 50%;
             line-height: 30px;
-            text-align: center;
-            color: #fff;
-            font-weight: bold;
+            border-radius: 50%;
+            background-color: #ddd;
+            display: inline-block;
+            margin: 0 5px;
         }
+
         .step-indicator span.active {
             background-color: #007bff;
-        }
-
-        /* Button Positioning */
-        .buttons {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        /* Toggle Button (ChatGPT-style) */
-        .toggle-switch {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            display: flex;
-            align-items: center;
-        }
-        .toggle-switch input[type="checkbox"] {
-            display: none;
-        }
-        .toggle-switch label {
-            position: relative;
-            width: 45px;
-            height: 24px;
-            background-color: #6c757d;
-            border-radius: 50px;
-            cursor: pointer;
-        }
-        .toggle-switch label::after {
-            content: '';
-            position: absolute;
-            top: 2px;
-            left: 2px;
-            width: 20px;
-            height: 20px;
-            background-color: #fff;
-            border-radius: 50%;
-            transition: left 0.3s ease;
-        }
-        .toggle-switch input:checked + label::after {
-            left: 23px;
-        }
-        .toggle-switch input:checked + label {
-            background-color: #007bff;
-        }
-
-        /* Logo and Bank Name */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .header h3 {
-            margin: 0;
-            font-weight: bold;
+            color: white;
         }
     </style>
 </head>
-<body>
+<body class="bg-light text-dark">
 
-<div class="container">
-    <div class="header">
-        <h3 class="text-center">123 Bank PLC</h3>
-        <div class="navbar-brand">
-            <img src="https://via.placeholder.com/40" alt="Bank Logo">
-        </div>
+<div class="container mt-5 p-4 bg-white rounded shadow">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h3 class="mb-0">123 Bank PLC</h3>
+        <img src="https://via.placeholder.com/40" alt="Bank Logo" class="navbar-brand">
     </div>
 
-
     <!-- Step Indicators -->
-    <div class="step-indicator">
+    <div class="step-indicator text-center mb-4">
         <span class="active">1</span>
         <span>2</span>
         <span>3</span>
@@ -156,7 +59,7 @@
                 <label for="otp" class="form-label">Enter the OTP sent to your phone</label>
                 <input type="text" class="form-control" id="otp" placeholder="123456" required>
             </div>
-            <div class="buttons">
+            <div class="d-flex justify-content-end">
                 <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
             </div>
         </div>
@@ -177,111 +80,100 @@
                 <label for="idValue" class="form-label">ID Number</label>
                 <input type="text" class="form-control" id="idValue" placeholder="Enter your ID number" required>
             </div>
-            <div class="buttons">
+            <div class="d-flex justify-content-between">
                 <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
                 <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
             </div>
         </div>
 
-        <!-- Step 3 to 6 Omitted for Brevity -->
-<!-- Step 3: Capture ID Photo (Front) -->
-<div class="step">
-    <h5>Step 3: Capture ID Photo (Front)</h5>
-    <div class="mb-3">
-        <label for="idPhotoFront" class="form-label">Capture or Upload ID Photo (Front)</label>
-        <input type="file" class="form-control" id="idPhotoFront" accept="image/*" required>
-    </div>
-    <div class="buttons">
-        <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
-        <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
-    </div>
-</div>
-
-<!-- Step 4: Populate Information from ID -->
-<div class="step">
-    <h5>Step 4: Your Information from ID</h5>
-    
-    <div class="row mb-3">
-        <div class="col-md-6">
-            <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" value="John" readonly>
+        <!-- Step 3: Capture ID Photo (Front) -->
+        <div class="step">
+            <h5>Step 3: Capture ID Photo (Front)</h5>
+            <div class="mb-3">
+                <label for="idPhotoFront" class="form-label">Capture or Upload ID Photo (Front)</label>
+                <input type="file" class="form-control" id="idPhotoFront" accept="image/*" required>
+            </div>
+            <div class="d-flex justify-content-between">
+                <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
+                <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
+            </div>
         </div>
-        <div class="col-md-6">
-            <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" value="Doe" readonly>
+
+        <!-- Step 4: Populate Information from ID -->
+        <div class="step">
+            <h5>Step 4: Your Information from ID</h5>
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <label for="firstName" class="form-label">First Name</label>
+                    <input type="text" class="form-control" id="firstName" value="John" readonly>
+                </div>
+                <div class="col-md-6">
+                    <label for="lastName" class="form-label">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" value="Doe" readonly>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <label for="dob" class="form-label">Date of Birth</label>
+                <input type="text" class="form-control" id="dob" value="01/01/1990" readonly>
+            </div>
+
+            <div class="mb-3">
+                <label for="gender" class="form-label">Gender</label>
+                <input type="text" class="form-control" id="gender" value="Male" readonly>
+            </div>
+
+            <div class="mb-3">
+                <label for="nationality" class="form-label">Nationality</label>
+                <input type="text" class="form-control" id="nationality" value="Tanzanian" readonly>
+            </div>
+
+            <div class="mb-3">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" id="address" value="P.O. Box 123, Dar es Salaam" readonly>
+            </div>
+
+            <div class="d-flex justify-content-between">
+                <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
+                <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
+            </div>
         </div>
-    </div>
 
-    <div class="mb-3">
-        <label for="dob" class="form-label">Date of Birth</label>
-        <input type="text" class="form-control" id="dob" value="01/01/1990" readonly>
-    </div>
+        <!-- Step 5: Capture ID Photo (Back) -->
+        <div class="step">
+            <h5>Step 5: Capture ID Photo (Back)</h5>
+            <div class="mb-3">
+                <label for="idPhotoBack" class="form-label">Capture or Upload ID Photo (Back)</label>
+                <input type="file" class="form-control" id="idPhotoBack" accept="image/*" required>
+            </div>
+            <div class="d-flex justify-content-between">
+                <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
+                <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
+            </div>
+        </div>
 
-    <div class="mb-3">
-        <label for="gender" class="form-label">Gender</label>
-        <input type="text" class="form-control" id="gender" value="Male" readonly>
-    </div>
-
-    <div class="mb-3">
-        <label for="nationality" class="form-label">Nationality</label>
-        <input type="text" class="form-control" id="nationality" value="Tanzanian" readonly>
-    </div>
-
-    <div class="mb-3">
-        <label for="address" class="form-label">Address</label>
-        <input type="text" class="form-control" id="address" value="P.O. Box 123, Dar es Salaam" readonly>
-    </div>
-
-    <div class="buttons">
-        <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
-        <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
-    </div>
-</div>
-
-<!-- Step 5: Capture ID Photo (Back) -->
-<div class="step">
-    <h5>Step 5: Capture ID Photo (Back)</h5>
-    <div class="mb-3">
-        <label for="idPhotoBack" class="form-label">Capture or Upload ID Photo (Back)</label>
-        <input type="file" class="form-control" id="idPhotoBack" accept="image/*" required>
-    </div>
-    <div class="buttons">
-        <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
-        <button type="button" class="btn btn-primary" onclick="nextStep()">Next</button>
-    </div>
-</div>
-
-<!-- Step 6: Review and Submit -->
-<div class="step">
-    <h5>Step 6: Review and Submit</h5>
-    
-    <div class="mb-3">
-        <label for="confirmInfo" class="form-label">Please review the information and confirm everything is correct.</label>
-        <textarea class="form-control" id="confirmInfo" rows="5" readonly>
-            Name: John Doe
-            Date of Birth: 01/01/1990
-            Gender: Male
-            Nationality: Tanzanian
-            Address: P.O. Box 123, Dar es Salaam
-        </textarea>
-    </div>
-
-    <div class="form-check mb-3">
-        <input class="form-check-input" type="checkbox" id="termsAgreement" required>
-        <label class="form-check-label" for="termsAgreement">
-            I confirm that the above information is correct and I agree to the terms and conditions.
-        </label>
-    </div>
-
-    <div class="buttons">
-        <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
-        <button type="submit" class="btn btn-success">Submit</button>
-    </div>
-</div>
         <!-- Step 6: Review and Submit -->
         <div class="step">
             <h5>Step 6: Review and Submit</h5>
-            <div class="buttons">
+            <div class="mb-3">
+                <label for="confirmInfo" class="form-label">Please review the information and confirm everything is correct.</label>
+                <textarea class="form-control" id="confirmInfo" rows="5" readonly>
+                    Name: John Doe
+                    Date of Birth: 01/01/1990
+                    Gender: Male
+                    Nationality: Tanzanian
+                    Address: P.O. Box 123, Dar es Salaam
+                </textarea>
+            </div>
+
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="termsAgreement" required>
+                <label class="form-check-label" for="termsAgreement">
+                    I confirm that the above information is correct and I agree to the terms and conditions.
+                </label>
+            </div>
+
+            <div class="d-flex justify-content-between">
                 <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
                 <button type="submit" class="btn btn-success">Submit</button>
             </div>
@@ -290,10 +182,10 @@
         <!-- Step 7: Success Message -->
         <div class="step">
             <h5>Success!</h5>
-            <div class="alert alert-success" role="alert">
+            <div class="alert alert-success">
                 Your information is under review. You will receive a confirmation message once your account is opened.
             </div>
-            <div class="buttons">
+            <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-primary" onclick="window.location.reload()">Finish</button>
             </div>
         </div>
@@ -305,7 +197,6 @@
     const steps = document.querySelectorAll(".step");
     const stepIndicators = document.querySelectorAll(".step-indicator span");
 
-    // Function to show the current step
     function showStep(step) {
         steps.forEach((el, index) => {
             el.classList.toggle("active", index === step);
@@ -313,7 +204,6 @@
         });
     }
 
-    // Go to the next step
     function nextStep() {
         if (currentStep < steps.length - 1) {
             currentStep++;
@@ -321,7 +211,6 @@
         }
     }
 
-    // Go to the previous step
     function prevStep() {
         if (currentStep > 0) {
             currentStep--;
@@ -329,20 +218,12 @@
         }
     }
 
-    // Handle form submission
     document.getElementById('bankAccountForm').addEventListener('submit', function (e) {
         e.preventDefault();
         nextStep();
     });
 
-    // Show the initial step
     showStep(currentStep);
-
-    // Toggle dark mode
-    const darkModeToggle = document.getElementById('darkModeToggle');
-    darkModeToggle.addEventListener('change', function () {
-        document.body.classList.toggle('dark');
-    });
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
