--- a/acc.html
+++ b/acc.html
@@ -78,7 +78,7 @@
             </div>
             <div class="mb-3">
                 <label for="idValue" class="form-label">ID Number</label>
-                <input type="text" class="form-control" id="idValue" placeholder="Enter your ID number" required>
+                <input type="number" class="form-control" id="idValue" placeholder="Enter your ID value" required>
             </div>
             <div class="d-flex justify-content-between">
                 <button type="button" class="btn btn-secondary" onclick="prevStep()">Previous</button>
