--- a/g.html
+++ b/g.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container mt-5">
-        <h1 class="text-center">Simple Bond Calculator</h1>
+        <h1 class="text-center">Bond Calculator</h1>
         
         <!-- Bond Calculator Form -->
         <form id="bondForm" class="mt-4">
