--- a/g.html
+++ b/g.html
@@ -51,7 +51,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="calculator-card">
-                    <h1 class="text-center mb-4">Professional Bond Calculator</h1>
+                    <h1 class="text-center mb-4">Bond Calculator</h1>
                     <!-- Bond Calculator Form -->
                     <form id="bondForm" class="mt-4">
                         <div class="mb-3">
